# trabalho-7

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
docs/: arquitetura.md  experimento.md  requisitos.md
examples/: line.yaml  random_mesh.yaml  ring.yaml  star.yaml
results/: benchmark_summary.csv
src/: __init__.py
src/algorithms/: __init__.py  flooding.py  informed_flooding.py  informed_random_walk.py  random_walk.py
src/cli/: main.py
src/config/: loader.py
src/experiments/: __init__.py  benchmark.py
src/gui/: __init__.py  app.py  graph_layout.py
src/network/: __init__.py  network.py  node.py
src/simulation/: __init__.py  report.py  search_simulator.py
src/validators/: __init__.py  network_validator.py
src/visualization/: plots.py
tests/: test_algorithms.py  test_benchmark.py  test_config_and_validation.py  test_graph_layout.py  test_report.py
