[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "p2p-search-simulator"
version = "0.1.0"
description = "Simulacao de algoritmos de busca em redes P2P nao estruturadas."
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9",
    "networkx>=3.3",
    "pandas>=2.2",
    "pyyaml>=6.0",
]

[project.scripts]
p2p-search = "src.cli.main:main"

[project.optional-dependencies]
dev = [
    "mypy>=1.16",
    "pytest>=8.2",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "networkx.*",
    "pandas.*",
]
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["src*"]
